--- a/new-ui.css
+++ b/new-ui.css
@@ -760,7 +760,7 @@ color: #5277ff!important;
 #app_colors .col-md-9.col-xs-8{
   background-color:#fff!important;
 }
-#sb-tour-color-section-General .content-color {
+.color-section.change-overview-content .content-color {
   background-color:#fff!important;
 }
 ul.color-sections li {
