--- a/new-ui.css
+++ b/new-ui.css
@@ -765,7 +765,7 @@ border-color: #ededed;
 .color-section.change-overview-content .content-color {
   background-color:#fff!important;
 }
-.color-section.change-overview-content .content-colors {
+#app_colors .content-colors {
     height: 90vh;
 }
 ul.color-sections li {
