--- a/new-ui.css
+++ b/new-ui.css
@@ -857,7 +857,14 @@ content: '';
 .tabbar-check:first-child {
   margin-left: 0px!important;
 }
-
+#page .nav-tabs {
+    border: 0 !important;
+    margin-left: 0px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    background-color: #eef1ff;
+}
 
 @media only screen and (max-width: 991px) {
 .dashboard {
