--- a/new-ui.css
+++ b/new-ui.css
@@ -860,19 +860,22 @@ content: '';
 #page .nav-tabs {
     border: 0 !important;
     margin-left: 0px;
-    width: 100%;
+    width: 96%;
     display: flex;
     justify-content: space-between;
     background-color: #eef1ff;
  border-radius: 70px;
+ margin: auto;
 }
 #page .nav-tabs > li{
    width: 100%;
+  text-align:center;
 }
 #page .nav-tabs > li.active > a{
  color: #fff;
     background-color: #5277ff;
- text-align:center;
+
+ border-radius: 60px;
 }
 @media only screen and (max-width: 991px) {
 .dashboard {
