--- a/new-ui.css
+++ b/new-ui.css
@@ -15,6 +15,19 @@ width: auto;
     height: 40px;
  margin-top:10px;
 }
+button.toggle_design{
+ margin-top: -3px;
+    border-radius: 60px;
+}
+.button.toggle_design:hover{
+   border-radius: 60px;
+}
+.toggle_design i.fa{
+ padding: 7px 12px;
+    border-radius: 60px;
+    font-size: 26px;
+}
+
 input.input-flat{
 height: 40px;
     border: 0px solid #cdd2e1;
