--- a/new-ui.css
+++ b/new-ui.css
@@ -919,8 +919,12 @@ padding-left: 137px;
  height: 120px;
     width: 120px;
 }
-
-
+#page .form-group .col-sm-3,#page .form-group .col-sm-7{
+   width: 100%!important;
+}
+#page .content-feature{
+ border:none;
+}
 
 @media only screen and (max-width: 991px) {
 .dashboard {
