--- a/new-ui.css
+++ b/new-ui.css
@@ -14,6 +14,7 @@ width: auto;
     border-radius: 5px;
     height: 40px;
  margin-top:10px;
+ padding: 0px 15px;
 }
 button.toggle_design{
  margin-top: -3px;
