--- a/new-ui.css
+++ b/new-ui.css
@@ -926,6 +926,13 @@ padding-left: 137px;
 #page .content-feature{
 border-left: none!important;
 }
+.icon_and_name .btn img#current_icon{
+ width: 90px;
+   height: 90px;
+}
+
+
+
 
 @media only screen and (max-width: 991px) {
 .dashboard {
