--- a/new-ui.css
+++ b/new-ui.css
@@ -931,9 +931,21 @@ border-left: none!important;
    height: 90px;
 }
 
-
-
-
+#pages_content .list-search{
+right: 20px;
+    left: initial!important;
+    width: 250px;
+    top: 4px;
+}
+#pages_content .list-search .input.input-flat{
+ width: 100%;
+    height: 35px;
+    border-radius: 60px;
+}
+#pages_content .list-search i {
+     left: 220px;
+    top: -26px;
+}
 @media only screen and (max-width: 991px) {
 .dashboard {
     display: block;
