--- a/new-ui.css
+++ b/new-ui.css
@@ -940,7 +940,7 @@ right: 20px;
 #pages_content #go_up_root.hide ~ .list-search{
   left: initial!important;
 }
-#pages_content .list-search .input.input-flat{
+ .list-search .input.input-flat{
  width: 100%;
     height: 35px;
     border-radius: 60px;
