--- a/new-ui.css
+++ b/new-ui.css
@@ -940,8 +940,8 @@ right: 20px;
 #pages_content #go_up_root.hide ~ .list-search{
   left: initial!important;
 }
- .list-search .input.input-flat{
- width: 100%;
+ #pages_content .list-search input{
+ width: 100%!important;
     height: 35px;
     border-radius: 60px;
 }
