--- a/new-ui.css
+++ b/new-ui.css
@@ -975,6 +975,11 @@ right: 20px;
      left: 220px;
     top: -26px;
 }
+.bt-header-left,bt-header-right{
+ margin-top: -7px!important;
+    height: 35px!important;
+    margin-left: 0px;
+}
 @media only screen and (max-width: 991px) {
 .dashboard {
     display: block;
