--- a/new-ui.css
+++ b/new-ui.css
@@ -975,7 +975,7 @@ right: 20px;
      left: 220px;
     top: -26px;
 }
-.bt-header-left,bt-header-right{
+.bt-header-left,.bt-header-right{
  margin-top: -7px!important;
     height: 35px!important;
     margin-left: 0px;
