--- a/new-ui.css
+++ b/new-ui.css
@@ -975,8 +975,13 @@ right: 20px;
      left: 220px;
     top: -26px;
 }
-.bt-header-left,.bt-header-right{
+.bt-header-left{
  margin-top: -7px!important;
+    height: 35px!important;
+    margin-left: 0px;
+}
+.bt-header-right{
+ margin-top: 0px!important;
     height: 35px!important;
     margin-left: 0px;
 }
