--- a/new-ui.css
+++ b/new-ui.css
@@ -1002,6 +1002,9 @@ right: 20px;
  background-color: #fff;
     padding: 16px;
 }
+#sb-tour-add-pages-filter ul{
+  background-color: #f8fafc;
+}
 @media only screen and (max-width: 991px) {
 .dashboard {
     display: block;
