--- a/new-ui.css
+++ b/new-ui.css
@@ -1002,7 +1002,7 @@ right: 20px;
  background-color: #fff;
     padding: 16px;
 }
-#sb-tour-add-pages-filter ul{
+#sb-tour-add-pages-filter ul,#sb-tour-add-pages-filter{
   background-color: #f8fafc;
 }
 @media only screen and (max-width: 991px) {
