--- a/new-ui.css
+++ b/new-ui.css
@@ -1003,7 +1003,7 @@ right: 20px;
     padding: 16px;
 }
 #sb-tour-add-pages-filter ul,#sb-tour-add-pages-filter{
-  background-color: #f8fafc;
+  background-color: #f8fafc!important;
 }
 @media only screen and (max-width: 991px) {
 .dashboard {
