--- a/new-ui.css
+++ b/new-ui.css
@@ -1004,7 +1004,7 @@ right: 20px;
  border-bottom:none;
  
 }
- .background-icon-feature{
+ .background-icon-feature,.block_add_pages_icon{
  filter: brightness(0);
 }
 #add-pages .content{
@@ -1034,7 +1034,7 @@ font-weight: bold!important;
  background: #5277ff;
  border-radius: 10px;
 }
- .block_add_pages_icon:hover .background-icon-feature{
+ .block_add_pages_icon:hover .background-icon-feature,.block_add_pages_icon:hover{
  filter: brightness(0) invert(1);
 }
 span.folder-hover:hover, li.folder-sortable.active > span.folder-hover {
