--- a/new-ui.css
+++ b/new-ui.css
@@ -1034,7 +1034,10 @@ font-weight: bold!important;
  background: #5277ff;
  border-radius: 10px;
 }
- .block_add_pages_icon:hover .background-icon-feature,.block_add_pages_icon:hover{
+ .block_add_pages_icon:hover .background-icon-feature{
+ filter: brightness(0) invert(1);
+}
+.folder_add_page .block_add_pages_icon:hover{
  filter: brightness(0) invert(1);
 }
 span.folder-hover:hover, li.folder-sortable.active > span.folder-hover {
