--- a/new-ui.css
+++ b/new-ui.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+ .option_value.selected * {
+    color: #ffffff;
+    filter: brightness(0) invert(1) grayscale(0);
+}
+.search_carousel_li.selected{
+background-color: #5277ff !important; 
+}
 
 body{
  background-color: #fbfbfb !important;
