--- a/new-ui.css
+++ b/new-ui.css
@@ -724,7 +724,7 @@ img#layout_overview{
 #sb-tour-slider-section  .content-white-bkg {
     background-color: #ffffff00 !important;
 }
-#font_contentinput #custom_mate.input-flat{
+ #custom_mate.input-flat{
  border: 1px solid #cdd2e1;
     background-color: #fff!important;
     border-radius: 5px;
