--- a/new-ui.css
+++ b/new-ui.css
@@ -1085,14 +1085,14 @@ background-color: #5277ff !important;
 
 #general-information .col-md-3,#general-information .col-sm-3,#general-information .col-sm-7{
  width:100%!important;
+ padding: 0;
 }
 #general-information .col-md-7{
 width: 100%!important;
     padding: 10px;
     background-color: #eef1ff;
-border-radius: 5px;
+    border-radius: 5px;
     display: block;
-    margin-left: 10px;
     margin-top: 5px;
 }
 
