--- a/new-ui.css
+++ b/new-ui.css
@@ -10,9 +10,11 @@ label {
     color: #373d3f;
 }
 .alert-warning {
-     color: #a31b19;
+  color: #474747;
     background-color: #eef1ff;
     border-bottom-color: transparent;
+    font-weight: normal;
+    border-radius: 10px;
 }
 .color-purple {
     background-color: #5277ff !important;
