--- a/new-ui.css
+++ b/new-ui.css
@@ -1175,7 +1175,7 @@ background-color: transparent!important;
 #startup .row .col-md-8{
  order:2;
 }
-#startup row .col-md-4 .content-options.content-white-bkg{
+#startup .row .col-md-4 .content-options.content-white-bkg{
  background-color: transparent!important;
 }
 
