--- a/new-ui.css
+++ b/new-ui.css
@@ -74,8 +74,8 @@ height: 40px;
 .default_button.color-red,.upload_images{
  background-color: #5277ff !important;
 }
-.styled-select.color-blue,.styled-select.color-red {
-    height: 45px!important;
+.styled-select.color-blue,.styled-select.color-red,.styled-select.color-green {
+ height: 45px!important;
    background-color: #eef1ff !important;
 color: #373d3f!important;
 }
