--- a/new-ui.css
+++ b/new-ui.css
@@ -1219,6 +1219,9 @@ width: 100%!important;
 font-size: 18px;
  color: #181818!important;
 }
+#sb-tour-monetize-source .sb-save-info-button button,#apple-content .sb-save-info-button button{
+ float: left!important;
+}
 @media only screen and (max-width: 991px) {
 .dashboard {
     display: block;
